--- a/www/index.html
+++ b/www/index.html
@@ -1118,6 +1118,13 @@
         <td>http://bit.ly/vagrant-lxc-openmandriva2013-0-x86_64-2013-10-21</td>
         <td>88MB</td>
       </tr>
+      <tr>
+        <th scope="row">wasta-Linux amd64 (<a href="http://itconnect.info/...">source</a>)</th>
+        <td>Virtualbox</td>
+        <td>http://bit.ly/vagrant-wasta</td>
+        <td>88MB</td>
+      </tr>
+
     </tbody>
   </table>
 
