Update URLs to wasta

--- a/www/index.html
+++ b/www/index.html
@@ -1119,9 +1119,9 @@
         <td>88MB</td>
       </tr>
       <tr>
-        <th scope="row">wasta-Linux amd64 (<a href="http://itconnect.info/...">source</a>)</th>
+        <th scope="row">wasta-Linux amd64 (<a href="http://itconnect.info/group/linux-desktop/page/wasta-linux">source</a>)</th>
         <td>Virtualbox</td>
-        <td>http://bit.ly/vagrant-wasta</td>
+        <td>http://goo.gl/kifxgv</td>
         <td>2230MB</td>
       </tr>
     </tbody>
